--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Soreiny</title>
 </head>
 <body>
-    <p>hoddlgigjghosiuohpea</p>
+    <p>introduccion</p>
     <h1>buena </h1>
-    
+
 </body>
 </html>
